# Project-Santis

./: .gitignore  README.md  docker-compose.yml  insert.sql
nginx/: default.conf
santis/: .gitignore  Cargo.toml  Dockerfile  package-lock.json  package.json  santis.db  server.js
santis/assets/: uikit-modal.html
santis/assets/css/: app.css  list.css
santis/old_node/: package-lock.json
santis/old_node/views/: index.pug  list.pug  script.js
santis/old_node/views/includes/: enter_message.pug  item.pug  table_gen.pug  table_row.pug
santis/src/: datastructs.rs  main.rs  template_struct.rs
santis/templates/: boxes.html  enter_message.html  hello.html  index.html  list.html  test.html
santis/templates/includes/: box_row.html  boxes_template.html  search_template.html  table_edit.html  table_row.html
santis/views/: index.pug  list.pug
santis/views/includes/: item_list.pug  table_edit.pug  table_row.pug
