[package]
name = "Santis"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version="0.7.2", features=["sqlite", "runtime-tokio-rustls", "any", "uuid", "chrono", "rust_decimal", "macros"]}
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.4", features = ["fs", "trace" ] }
uuid = { version="1.5.0", features = ["v4", "serde"]}
